# agent-manifesto

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONSISTENCY_VERIFICATION_REPORT.md  README.md  USAGE.md  artifact-manifest.json  claude-code-technical-spec.md  constraints-taxonomy.md  depgraph-before.json  depgraph.json  design-development-foundation.md  export-manifest.json  implementation-boundaries.md  install-hallucination-hook.sh  manifest-trace  manifesto.md  paperize.yaml  poc-hallucination-hook.sh  run-poc-validation.sh
.claude/: settings.json  settings.local.json
agent-spec-lib/: CHANGELOG.md  (+9 more)
docs/research/routellm-phase3/classifier/: additional_prompts.py  alert_dispatcher.py  annotator_kit.py  arena_to_gt.py  bench_models.py  calibrate_from_gt.py  calibration.py  compute_disagreement_tiers.py  decision_event.schema.json  decision_logger.py  e2e_smoke.js  eval_real_corpus.py  extract_real_prompts.py  fine_cost_sweep.py  gt_accuracy.py  gt_to_corrections.py  held_out_calibration.py  kappa.py  label_data.py  load_test.py  long_prompts.py  monitor_drift.py  opus_labels.py  per_task_accuracy.py  pyproject.toml  qwen_labels.py  qwen_vs_opus.py  qwen_vs_qwen.py  retrain_cli.py  router.js  sample_for_gt.py  sample_qwen_candidates.py  serve.py  serve_encoder.py  serve_setfit.py  threshold_tuning.py  train.py  train_calibrated.py  train_encoder.py  train_qlora.py  (+4 more)
docs/research/routellm-phase3/classifier/launchd/: com.nirarin.router-drift.plist.template
docs/research/routellm-phase3/classifier/tests/: test_compute_disagreement_tiers.py  test_decision_log_integration.py
(+2373 files in other folders)
