[project]
name = "phase3-classifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0",
    "scikit-learn>=1.5",
    "torch>=2.0",
    "datasets>=3.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "joblib>=1.5.3",
    "aiohttp>=3.13.5",
    "setfit>=1.1.3",
    "transformers<5",
    "peft>=0.19.1",
    "protobuf>=7.34.1",
    "sentencepiece>=0.2.1",
]
